syntax = "proto3";

package order;

service PaymentService {
  rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
  string order_id = 1;
  float amount = 2;
}

message PaymentResponse {
  bool success = 1;
  string message = 2;
}